--- a/.travis.yml
+++ b/.travis.yml
@@ -15,8 +15,8 @@ gobuild_args: -race -tags full -i -o $GOPATH/bin/cx github.com/skycoin/cx/cxgo/
 
 # Install dev dependencies 
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -qq && apt-get install --no-install-recommends -y libxi-dev libgl1-mesa-dev libxrandr-dev libxcursor-dev libxinerama-dev; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update ; brew install libxi-dev libgl1-mesa-dev libxrandr-dev libxcursor-dev libxinerama-dev; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -qq && sudo apt-get install --no-install-recommends -y libxi-dev libgl1-mesa-dev libxrandr-dev libxcursor-dev libxinerama-dev; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update ; brew install libx11 libxcursor libgl1-mesa libxrandr libxinerama; fi
 
 install:
   - go get github.com/skycoin/skycoin/...
