--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ os:
 
 # go_import_path: github.com/skycoin/cx
 
-gobuild_args: -race -tags full -i -o $GOPATH/bin/cx github.com/skycoin/cx/cxgo/
+# gobuild_args: -race -tags full -i -o $GOPATH/bin/cx github.com/skycoin/cx/cxgo/
 
 # Install dev dependencies 
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -qq && sudo apt-get install --no-install-recommends -y libxi-dev libgl1-mesa-dev libxrandr-dev libxcursor-dev libxinerama-dev; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update ; brew install libx11 libxcursor libgl1-mesa libxrandr libxinerama; fi
+  # - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update ; brew install libx11 libxcursor libgl1-mesa libxrandr libxinerama; fi
 
 install:
   - go get github.com/skycoin/skycoin/...
@@ -34,5 +34,5 @@ before_script:
   - $GOPATH/bin/goyacc -o $GOPATH/src/github.com/skycoin/cx/cxgo/cxgo.go $GOPATH/src/github.com/skycoin/cx/cxgo/cxgo.y
   
 script:
-  - go build
-  - go test
+  - go build -race -tags full -i -o $GOPATH/bin/cx github.com/skycoin/cx/cxgo/
+  - go test -race -tags full -i -o $GOPATH/bin/cx github.com/skycoin/cx/cxgo/
