--- a/.travis.yml
+++ b/.travis.yml
@@ -9,14 +9,9 @@ os:
   - linux
   - osx
 
-# go_import_path: github.com/skycoin/cx
-
-# gobuild_args: -race -tags full -i -o $GOPATH/bin/cx github.com/skycoin/cx/cxgo/
-
-# Install dev dependencies 
+# Install dev dependencies
 before_install:
   - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -qq && sudo apt-get install --no-install-recommends -y libxi-dev libgl1-mesa-dev libxrandr-dev libxcursor-dev libxinerama-dev; fi
-  # - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update ; brew install libx11 libxcursor libgl1-mesa libxrandr libxinerama; fi
 
 install:
   - go get github.com/skycoin/skycoin/...
@@ -36,3 +31,9 @@ before_script:
 script:
   - go build -race -tags full -i -o $GOPATH/bin/cx github.com/skycoin/cx/cxgo/
   - go test -race -tags full -i -o $GOPATH/bin/cx github.com/skycoin/cx/cxgo/
+
+notifications:
+  email:
+    - travis@skycoin.net
+  # https://github.com/kvld/travisci-telegram TravisCI Telegram Bot integration
+  webhooks: https://fathomless-fjord-24024.herokuapp.com/notify
