--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -7,7 +7,7 @@ stack: go 1.11
 
 # Install dev dependencies
 install:
-  - set PATH=c:\cygwin\bin;%GOPATH%\bin;c:\go\bin;%PATH%
+  - set PATH=c:\cygwin64\bin;%GOPATH%\bin;c:\go\bin;%PATH%
   - echo %PATH%
   - go version
   - go get github.com/skycoin/skycoin/...
