--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,7 +12,8 @@ stack: go 1.11
 # Install dev dependencies
 install:
   - set PATH=C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\bin;%GOPATH%\bin;c:\go\bin;%PATH%
-  - echo %PATH%
+  - dir C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\bin
+  - C:\MinGW\bin\mingw-get install gcc g++ mingw32-make
   - go version
   - go get github.com/skycoin/skycoin/...
   - go get github.com/go-gl/gl/v2.1/gl
