--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,8 +11,9 @@ stack: go 1.11
 
 # Install dev dependencies
 install:
-  - set PATH=C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\bin;%GOPATH%\bin;c:\go\bin;%PATH%
-  - dir C:\mingw-w64\x86_64-7.2.0-posix-seh-rt_v5-rev1\bin
+  - set PATH=C:\mingw-w64\bin;%GOPATH%\bin;c:\go\bin;%PATH%
+  - dir C:\mingw-w64\bin
+  - dir C:\MinGW
   - C:\MinGW\bin\mingw-get install gcc g++ mingw32-make
   - go version
   - go get github.com/skycoin/skycoin/...
