[ci] Try to find gcc #13

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,7 +12,7 @@ stack: go 1.11
 # Install dev dependencies
 install:
   - set PATH=C:\mingw-w64\bin;%GOPATH%\bin;c:\go\bin;%PATH%
-  - dir C:\mingw-w64\bin
+  - dir C:\
   - dir C:\MinGW
   - C:\MinGW\bin\mingw-get install gcc g++ mingw32-make
   - go version
