--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -11,8 +11,9 @@ stack: go 1.11
 
 # Install dev dependencies
 install:
-  - set PATH=c:\mingw-w64\bin;%GOPATH%\bin;c:\go\bin;%PATH%
-  - dir c:\mingw-w64
+  - set PATH=c:\mingw-w64\x86_64-7.3.0-posix-seh-rt_v5-rev0\bin;%GOPATH%\bin;c:\go\bin;%PATH%
+  - dir c:\mingw-w64\x86_64-7.3.0-posix-seh-rt_v5-rev0
+  - dir c:\mingw-w64\x86_64-7.3.0-posix-seh-rt_v5-rev0\bin
   #- c:\mingw-w64\bin\mingw-get install gcc g++ mingw32-make
   - go version
   - go get github.com/skycoin/skycoin/...
