--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -12,9 +12,6 @@ stack: go 1.11
 # Install dev dependencies
 install:
   - set PATH=c:\mingw-w64\x86_64-7.3.0-posix-seh-rt_v5-rev0\mingw64\bin;%GOPATH%\bin;c:\go\bin;%PATH%
-  - dir c:\mingw-w64\x86_64-7.3.0-posix-seh-rt_v5-rev0
-  - dir c:\mingw-w64\x86_64-7.3.0-posix-seh-rt_v5-rev0\mingw64
-  #- c:\mingw-w64\bin\mingw-get install gcc g++ mingw32-make
   - go version
   - go get github.com/skycoin/skycoin/...
   - go get github.com/go-gl/gl/v2.1/gl
@@ -35,3 +32,7 @@ build_script:
 
 test_script:
   - go test -race -tags full -i -o %GOPATH%\bin\cx github.com\skycoin\cx\cxgo\
+
+artifacts:
+  - path: '%GOPATH%\bin\cx'
+    name: cx
