--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -22,7 +22,7 @@ cache:
 
 # Install dev dependencies
 install:
-  - set PATH=%MINGW_W64\bin;%GOPATH%\bin;c:\go\bin;%PATH%
+  - set PATH=%MINGW_W64%\bin;%GOPATH%\bin;c:\go\bin;%PATH%
   - go version
   - go get github.com/skycoin/skycoin/...
   - go get github.com/go-gl/gl/v2.1/gl
