--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ os:
 
 # Install dev dependencies
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -qq && sudo apt-get install --no-install-recommends -y gir1.2-gtk-3.0 libxi-dev libgl1-mesa-dev libxrandr-dev libxcursor-dev libxinerama-dev; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -qq && sudo apt-get install --no-install-recommends -y libgtk-3-dev libpango1.0-dev libcairo2-dev libperl-dev libgtk2.0-dev libxi-dev libgl1-mesa-dev libxrandr-dev libxcursor-dev libxinerama-dev; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gtk; fi
 
 install:
   - go get github.com/skycoin/skycoin/...
