--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ sudo: required
 go:
   - "1.11.x"
 
+# Use a matrix to define SO and possible future changes
 matrix:
   include:
     - os: linux
@@ -14,8 +15,8 @@ matrix:
 
 # Install dev dependencies
 before_install:
-  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -qq && sudo apt-get install --no-install-recommends -y libgtk-3-dev libpango1.0-dev libcairo2-dev libperl-dev libgtk2.0-dev gir1.2-gtk-3.0 libxi-dev libgl1-mesa-dev libxrandr-dev libxcursor-dev libxinerama-dev; fi
-  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gtk; fi
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then sudo apt-get update -qq && sudo apt-get upgrade -y && sudo apt-get install --no-install-recommends -y libglib2.0-dev libgtk-3-dev libpango1.0-dev libcairo2-dev libperl-dev libgtk2.0-dev gir1.2-gtk-3.0 libxi-dev libgl1-mesa-dev libxrandr-dev libxcursor-dev libxinerama-dev; fi
+  - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew install gtk gtk3; fi
 
 # Install necessaries go packages
 install:
