--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ go:
 matrix:
   include:
     - os: linux
-      dist: xenial
+      dist: trusty
     # - os: osx
 
 # Install dev dependencies
@@ -21,13 +21,13 @@ before_install:
 
 # Install necessaries go packages
 install:
-  - go get github.com/skycoin/skycoin/...
-  - go get github.com/go-gl/gl/v2.1/gl
-  - go get github.com/go-gl/glfw/v3.2/glfw
-  - go get github.com/go-gl/gltext
-  - go get github.com/blynn/nex
-  - go get github.com/cznic/goyacc
-  - go get github.com/skycoin/cx/...
+  - go get -v github.com/skycoin/skycoin/...
+  - go get -v github.com/go-gl/gl/v2.1/gl
+  - go get -v github.com/go-gl/glfw/v3.2/glfw
+  - go get -v github.com/go-gl/gltext
+  - go get -v github.com/blynn/nex
+  - go get -v github.com/cznic/goyacc
+  - go get -v github.com/skycoin/cx/...
 
 # Generate cxgo necessaries files
 before_script:
