[ci] refs #130 Run test in osx

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,8 +19,7 @@ matrix:
   include:
     - os: linux
       dist: xenial
-
-    # - os: osx
+    - os: osx
 
 # Install dev dependencies
 before_install:
