--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -62,7 +62,7 @@ after_build:
 # use custom test_script
 test_script:
   - go test -race -tags full -i -o %GOPATH%\bin\cx github.com\skycoin\cx\cxgo\
-  - cmd: cx.exe %GOPATH%\src\github.com\skycoin\cx\tests
+  - cmd: %GOPATH%\bin\cx.exe %GOPATH%\src\github.com\skycoin\cx\tests\main.cx %GOPATH%\src\github.com\skycoin\cx\tests
 
 #specify artifacts to upload
 artifacts:
