--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,7 @@ install:
   - go get github.com/go-gl/gltext
   - go get github.com/blynn/nex
   - go get github.com/cznic/goyacc
-  - go get ./...
+  - go get -t -v ./...
 
 # Generate cxgo necessaries files
 before_script:
