Disable 'gui' and 'issue' tests from travis/appveyor

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -66,7 +66,7 @@ after_build:
 # use custom test_script
 test_script:
   - go test -race -tags full -i -o %GOPATH%\bin\cx github.com\skycoin\cx\cxgo\
-  - cmd: cx.exe %GOPATH%\src\github.com\skycoin\cx\tests\main.cx %GOPATH%\src\github.com\skycoin\cx\tests
+  - cmd: cx.exe %GOPATH%\src\github.com\skycoin\cx\tests\main.cx ++wdir=%GOPATH%\src\github.com\skycoin\cx\tests ++disable-tests=gui,issue
 
 #specify artifacts to upload
 artifacts:
