[ci] refs #130 Change PATH of MSYS_W64 on appveyor

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -15,8 +15,10 @@ clone_folder: c:\gopath\src\github.com\skycoin\cx
 environment:
   GOPATH: c:\gopath
   MINGW_W64: c:\mingw-w64\x86_64-7.3.0-posix-seh-rt_v5-rev0\mingw64
-  MSYS_W64: c:\msys64\mingw64\bin
+  # MSYS_W64: c:\msys64\mingw64\bin
+  MSYS_W64: C:\msys64\usr\bin
   APPVEYOR_RDP_PASSWORD: J8kDX3vVHGBT
+  MSYSTEM: MINGW64
 
 stack: go 1.11
 
@@ -24,8 +26,7 @@ stack: go 1.11
 init:
   # Enable Windows RDP Client Access to Build Worker
   - ps: iex ((new-object net.webclient).DownloadString('https://raw.githubusercontent.com/appveyor/ci/master/scripts/enable-rdp.ps1'))
-  - set PATH=%MSYS_W64%;%MINGW_W64%\bin;%GOPATH%\bin;c:\go\bin;%PATH%
-  - set MSYSTEM=MINGW64
+  - set PATH=%MSYS_W64%;%GOPATH%\bin;%PATH%
 
 # cache to build faster
 cache:
@@ -38,8 +39,8 @@ cache:
 
 # Install go dev dependencies
 install:
-  - bash -lc "pacman --noconfirm -S mingw-w64-x86_64-devhelp mingw-w64-x86_64-glade"
-  - bash -lc "pacman --noconfirm -S mingw-w64-x86_64-toolchain base-devel"
+  - bash -lc "pacman --noconfirm -S pacman"
+  - bash -lc "pacman --noconfirm -S mingw-w64-x86_64-devhelp mingw-w64-x86_64-glade mingw-w64-x86_64-toolchain base-devel"
   - go version
   - go get github.com/skycoin/skycoin/...
   - go get github.com/go-gl/gl/v2.1/gl
