[ci] refs #149 - Use make targets in Travis build script
Add make configure to setup PATH to cx

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,26 +21,18 @@ matrix:
       dist: xenial
     - os: osx
 
-# Install dev dependencies
-before_install:
-  - ./.ci-scripts/install-deps.sh
+## Install dev dependencies
+#before_install:
+#  - make install-deps
 
 # Install necessaries go packages
 install:
-  - ./cx.sh
-
-# Generate cxgo necessaries files
-before_script:
-  - $GOPATH/bin/nex -e $GOPATH/src/github.com/skycoin/cx/cxgo/cxgo0/cxgo0.nex
-  - $GOPATH/bin/goyacc -o $GOPATH/src/github.com/skycoin/cx/cxgo/cxgo0/cxgo0.go $GOPATH/src/github.com/skycoin/cx/cxgo/cxgo0/cxgo0.y
-  - $GOPATH/bin/nex -e $GOPATH/src/github.com/skycoin/cx/cxgo/cxgo.nex
-  - $GOPATH/bin/goyacc -o $GOPATH/src/github.com/skycoin/cx/cxgo/cxgo.go $GOPATH/src/github.com/skycoin/cx/cxgo/cxgo.y
+  - make install
 
 # Build, test & run cx test
 script:
-  - go build -race -tags full -i -o $GOPATH/bin/cx github.com/skycoin/cx/cxgo/
-  - go test -race -tags full -i -o $GOPATH/bin/cx github.com/skycoin/cx/cxgo/
-  - $GOPATH/bin/cx $GOPATH/src/github.com/skycoin/cx/tests/main.cx ++wdir=$GOPATH/src/github.com/skycoin/cx/tests ++disable-tests=gui,issue
+  - make build
+  - make test
 
 # Notifications to Telegram channel
 notifications:
