[ci] refs #149 - Symlink to skycoin/cx if running Travis builds for forks
Attempts to fix https://travis-ci.org/simelo/cx/jobs/468267956

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,6 +27,8 @@ matrix:
 
 # Install necessaries go packages
 install:
+  - if [[ ! -d $GOPATH/src/github.com/skycoin/cx ]]; then mkdir -p $GOPATH/src/github.com/skycoin; ln -s $TRAVIS_BUILD_DIR $GOPATH/src/github.com/skycoin/cx; fi
+  - cd $GOPATH/src/github.com/skycoin/cx
   - make install
 
 # Build, test & run cx test
