[ci] refs #149 - List files in cxgo

--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ matrix:
 install:
   - if [[ ! -d $GOPATH/src/github.com/skycoin/cx ]]; then mkdir -p $GOPATH/src/github.com/skycoin; ln -s $TRAVIS_BUILD_DIR $GOPATH/src/github.com/skycoin/cx; fi
   - cd $GOPATH/src/github.com/skycoin/cx
-  - echo "$(pwd)" && ls .
+  - echo "$(pwd)" && ls ./cxgo
   - make install
 
 # Build, test & run cx test
