[ci] refs #196 - Run make check-golden-files in Travis build
... added intentional failure to see it in action

--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,9 @@ install:
   - make install
 
 # Build, test & run cx test
+# Block PR if golden files not up to date
 script:
+  - if [[ $TRAVIS_PULL_REQUEST != "false" ]] ; then make check-golden-files ; fi
   - make build
   - make test
 
