--- a/.golangci.yml
+++ b/.golangci.yml
@@ -170,6 +170,7 @@ issues:
   # it can be disabled by `exclude-use-default: false`. To list all
   # excluded by default patterns execute `golangci-lint run --help`
   exclude:
+    - "stutters"
     - "G304: Potential file inclusion via variable"
     - "G204: Subprocess launched with variable"
     - "G104: Errors unhandled"
