--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -25,30 +25,37 @@
 #   unused-packages = true
 
 
-[[constraint]]
-  branch = "master"
-  name = "github.com/go-gl/gl"
+# [prune]
+#   branch = "master"
+#   name = "github.com/go-gl/gl"
 
-[[constraint]]
-  branch = "master"
-  name = "github.com/go-gl/glfw"
+# [prune]
+#   branch = "master"
+#   name = "github.com/go-gl/glfw"
 
-[[constraint]]
-  branch = "master"
-  name = "github.com/go-gl/gltext"
+# [prune]
+#   branch = "master"
+#   name = "github.com/go-gl/gltext"
 
-[[constraint]]
-  name = "github.com/satori/go.uuid"
-  version = "1.2.0"
+ignored = ["github.com/go-gl/gl"]
+
+# [[constraint]]
+#   name = "github.com/satori/go.uuid"
+#   version = "1.2.0"
 
 [[constraint]]
   name = "github.com/skycoin/skycoin"
   version = "0.25.1"
 
-[[constraint]]
-  branch = "master"
-  name = "github.com/theherk/viper"
+# [[constraint]]
+#   branch = "master"
+#   name = "github.com/theherk/viper"
 
 [prune]
   go-tests = true
   unused-packages = true
+  
+  # [[prune.project]]
+  #   name = "github.com/go-gl/glfw"
+  #   non-go = false
+  #   unused-packages = false
