--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -53,3 +53,7 @@ ignored = ["github.com/go-gl/*"]
 [prune]
   go-tests = true
   unused-packages = true
+
+[[constraint]]
+  branch = "master"
+  name = "github.com/sn-srdjan/cx-tracker-cli"
