--- a/.travis.yml
+++ b/.travis.yml
@@ -32,7 +32,7 @@ install:
 # Block PR if golden files not up to date
 script:
   - if [[ $TRAVIS_PULL_REQUEST != "false" ]] ; then make check-golden-files ; fi
-  - make build
+  - make build-full
   - make test-full
   - make lint
 
