--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -50,7 +50,7 @@ before_build:
 
 # use custom build_script
 build_script:
-  - go build -race -tags full -i -o %GOPATH%\bin\cx.exe github.com\skycoin\cx\cxgo\
+  - go build -race -tags="base opengl" -i -o %GOPATH%\bin\cx.exe github.com\skycoin\cx\cxgo\
 
 # Copy cx executable into project folder to avoid relative path problems
 after_build:
@@ -58,7 +58,7 @@ after_build:
 
 # use custom test_script
 test_script:
-  - go test -race -tags full -i -o %GOPATH%\bin\cx github.com\skycoin\cx\cxgo\
+  - go test -race -tags="base opengl" -i -o %GOPATH%\bin\cx github.com\skycoin\cx\cxgo\
   - cmd: cx.exe %GOPATH%\src\github.com\skycoin\cx\tests\main.cx ++cxpath=%GOPATH%\bin\cx.exe ++wdir=%GOPATH%\src\github.com\skycoin\cx\tests ++disable-tests=gui,issue
 
 #specify artifacts to upload
