--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ install:
 script:
   - if [[ $TRAVIS_PULL_REQUEST != "false" ]] ; then make check-golden-files ; fi
   - make build-full
+  - make test
   - make test-full
   - make lint
 
