--- a/.gitignore
+++ b/.gitignore
@@ -92,6 +92,6 @@ jira*
 .idea
 .directory
 /bin
-./*.chain_keys.json
-./*.chain_spec.json
-./*.genesis_keys.json
+*.chain_keys.json
+*.chain_spec.json
+*.genesis_keys.json
