--- a/.gitignore
+++ b/.gitignore
@@ -1,25 +1,41 @@
 _
 _ast.go
-/bin
-lexer
-generator
 .DS_Store
 ex.gsp
 .#*
 *.nn.go
-nexyacc
 ansi-c-yacc-grammar.y
 ansi_c-lex.l
 golang-empty-grammar.y
 golang-grammar.y
 cx.nn.go
-cx.go
 y.output
-test.pl
 main
 y.output
+cx0.go
+.leaps_cot.json
+*~
+*#
+jira*
+*.swp
+*.swo
+*.orig
+
+
+## Why is this on git ignore???
+
+cx.go
+
+## Questionable Files, that could be removed
+nexyacc
+.idea
+.directory
 mersenne-twister.go
 mersenne-twister.txt
+tasks.org
+test.pl
+
+## Temp files
 out.*
 *.o
 o
@@ -28,17 +44,9 @@ cpu.prof
 mem.prof
 *.pprof
 *.nn.go
-cx0.go
-tasks.org
-.leaps_cot.json
-*~
-*#
-jira*
-*.swp
-*.swo
-*.orig
-.idea
-.directory
+
+## Definately Should not be committed to github
+/bin
 
 ## Generated source files by goyacc
 #cxgo/cxgo0/cxgo0.go
