--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
   - GOARCH=amd64
 
 before_install:
-  - sudp apt-get update 
+  - sudo apt-get update 
   - sudo apt-get -y lade xvfb libxinerama-dev libxcursor-dev libxrandr-dev libgl1-mesa-dev libxi-dev libperl-dev libcairo2-dev libpango1.0-dev libglib2.0-dev libopenal-dev libxxf86vm-dev make
 
 # Use a matrix to define SO and possible future changes
