--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,23 @@ go:
 env:
   - GOARCH=amd64
 
-before_install:
-  - sudo apt-get update 
-  - sudo apt-get -y install glade xvfb libxinerama-dev libxcursor-dev libxrandr-dev libgl1-mesa-dev libxi-dev libperl-dev libcairo2-dev libpango1.0-dev libglib2.0-dev libopenal-dev libxxf86vm-dev make
+addons:
+  apt:
+    packages:
+    - make
+    - glade
+    - xvfb
+    - libxinerama-dev 
+    - libxcursor-dev
+    - libxrandr-dev
+    - libgl1-mesa-dev
+    - libxi-dev
+    - libperl-dev
+    - libcairo2-dev
+    - libpango1.0-dev
+    - libglib2.0-dev
+    - libopenal-dev
+    - libxxf86vm-dev
 
 # Use a matrix to define SO and possible future changes
 matrix:
