removed fibonacci-recursive test from cx tests

--- a/benchmarks/cx-benchmarks/Makefile
+++ b/benchmarks/cx-benchmarks/Makefile
@@ -1,25 +1,20 @@
-all_tests: akerman digital-root factorial-iterative  factorial-recursive fibonacci-recursive
+all_tests: akerman digital-root factorial-iterative  factorial-recursive
 
 akerman:
-	@echo "Running akerman test"
+	@echo "Running akerman test:"
 	cx ./ackermann-function.cx
 
 digital-root:
 	@echo
-	@echo "Running digital root test"
+	@echo "Running digital root test:"
 	cx ./digital-root.cx
 
 factorial-iterative:
 	@echo
-	@echo "Running factorial-iterative test"
+	@echo "Running factorial-iterative test:"
 	cx ./factorial-iterative.cx
 
 factorial-recursive:
 	@echo
-	@echo "Running factorial-recursive test"
+	@echo "Running factorial-recursive test:"
 	cx ./factorial-recursive.cx
-	
-fibonacci-recursive:
-	@echo
-	@echo "Running fibonacci-recursive test"
-	cx ./fibonacci-recursive.cx
