--- a/.travis.yml
+++ b/.travis.yml
@@ -37,6 +37,8 @@ matrix:
 
 # Build, test & run cx test
 script:
+  - make build-goyacc
+  - make build-parser
   - make build
   - make install
   - make test
