--- a/cmd/packageloader/makefile
+++ b/cmd/packageloader/makefile
@@ -6,3 +6,7 @@ test_loader:
 	go test ./loader -v -coverprofile cover.out
 	go tool cover -html=cover.out -o cover.html
 	open cover.html
+
+server:
+	sudo systemctl restart redis.service
+	redis-cli
