Finish server integration

--- a/cmd/packageloader/makefile
+++ b/cmd/packageloader/makefile
@@ -7,6 +7,7 @@ test_loader:
 	go tool cover -html=cover.out -o cover.html
 	open cover.html
 
-server:
+test_server:
 	sudo systemctl restart redis.service
+	go run main.go -l Test2 ./loader/test2
 	redis-cli
