Add encoder test

--- a/cmd/packageloader/makefile
+++ b/cmd/packageloader/makefile
@@ -7,7 +7,9 @@ test_loader:
 	go tool cover -html=cover.out -o cover.html
 	open cover.html
 
-test_server:
-	sudo systemctl restart redis.service
-	go run main.go -l Test2 ./loader/test2
-	redis-cli
+test_encoder:
+	go run main.go -l Test2 ./loader/test2/
+	sudo rm -r ./encoder/test/
+	go test ./encoder -v -coverprofile cover.out
+	go tool cover -html=cover.out -o cover.html
+	open cover.html
