--- a/cmd/packageloader/makefile
+++ b/cmd/packageloader/makefile
@@ -8,7 +8,7 @@ test_loader:
 	open cover.html
 
 test_encoder:
-	go run main.go -load -name Test2 -path ./loader/test2/
+	go run main.go -load -name Test -path ./loader/testValidProgram/
 	go test ./encoder -v -coverprofile cover.out
 	go tool cover -html=cover.out -o cover.html
 	open cover.html
