--- a/cmd/packageloader/makefile
+++ b/cmd/packageloader/makefile
@@ -8,8 +8,12 @@ test_loader:
 	open cover.html
 
 test_encoder:
-	go run main.go -load -name Test -path ./loader/testValidProgram/
+	make build
+	sudo rm -r ./encoder/test_redis/
+	sudo rm -r ./encoder/test_bolt/
+	./packageloader -redis -load -name Test -path ./loader/test_folder/test_valid_program
+	./packageloader -load -name Test -path ./loader/test_folder/test_valid_program
 	go test ./encoder -v -coverprofile cover.out
 	go tool cover -html=cover.out -o cover.html
 	open cover.html
-	sudo rm -r ./encoder/test/
+	
